--- a/src/components/largeImage.astro
+++ b/src/components/largeImage.astro
@@ -10,7 +10,7 @@ import '../styles/components/largeImage.scss'
     <div class="img-container">
         {
             !!img
-             ? <img id={id || null} src={img} style={`--bg: url('${img.src}')`} alt={alt || ''} draggable={draggable || false} />
+             ? <img id={id || null} src={img.src} style={`--bg: url('${img.src}')`} alt={alt || ''} draggable={draggable || false} />
              : <img id={id || null} src={src} style={`--bg: url('${    src}')`} alt={alt || ''} draggable={draggable || false} />
         }
     </div>
