--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -33,6 +33,7 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
             > img {
                 max-height: 100%;
                 max-width: 100%;
+                width: auto;
                 // background-image: var(--bg);
                 // background-repeat: no-repeat;
                 // background-size: cover;
