--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -6,11 +6,10 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
     position: relative;
     overflow: hidden;
     // display: grid;
-    max-height: 100%;
     height: fit-content;
     &:not(:has(> input[type="checkbox"]:checked)) {
         &, * {
-            max-height: 100%;
+            max-height: var(--max, 100%);
             max-width: 100%;
         }
     }
