--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,13 +30,13 @@ import '../styles/photos.scss'
         </div>
       </section>
       <span class="vHr"></span>
-      <section id="contact">
+      <section id="contactus">
         <h2 style="font-size: 2.25rem;">Interested in partnering with us?</h2>
         <h1>Contact Us</h1>
         <div id="contactDone" style="display: none;">
           <h3 align="center" style="font-size: 25px; display: none; margin: 0;">Thank You For Submitting!</h2>
         </div>
-        <form id="contactus" class="contact" action="https://docs.google.com/forms/d/e/1FAIpQLSc4qjrt9QFOiGU4DHHjagYlVsYdS77KiXqwo967oeGySAVMnQ/formResponse" method="POST">
+        <form class="contact" action="https://docs.google.com/forms/d/e/1FAIpQLSc4qjrt9QFOiGU4DHHjagYlVsYdS77KiXqwo967oeGySAVMnQ/formResponse" method="POST">
           <input type="text" name="entry.264713401" placeholder="Full Name" top required>
           <input type="email" name="entry.2027702877" placeholder="Email Address" required>
           <textarea type="text" name="entry.656122872" placeholder="Message" required></textarea>
