--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro'
 import Hero from '../components/hero.astro'
 import Split from '../components/split.astro'
 
+import ContactForm from '../components/contactForm.astro'
+
 import Carousels from '../components/carousels.astro'
 import ClubCarousel from '../components/carousels/clubCarousel.astro'
 import WorkCarousel from '../components/carousels/workCarousel.astro'
@@ -33,18 +35,7 @@ import '../styles/photos.scss'
       <section id="contactus">
         <h2 style="font-size: 2.25rem;">Interested in partnering with us?</h2>
         <h1>Contact Us</h1>
-        <div id="contactDone" style="display: none;">
-          <h3 align="center" style="font-size: 25px; display: none; margin: 0;">Thank You For Submitting!</h2>
-        </div>
-        <form class="contact" action="https://docs.google.com/forms/d/e/1FAIpQLSc4qjrt9QFOiGU4DHHjagYlVsYdS77KiXqwo967oeGySAVMnQ/formResponse" method="POST">
-          <input type="text" name="entry.264713401" placeholder="Full Name" top required>
-          <input type="email" name="entry.2027702877" placeholder="Email Address" required>
-          <textarea type="text" name="entry.656122872" placeholder="Message" required></textarea>
-          <input type="hidden" name="entry.1445095683" value="true" />
-          <!-- add hidden Honeypot input to prevent spams -->
-          <input type="hidden" name="_gotcha" style="display:none!important">
-          <input type="submit" class="primary" onclick="sendMessage()" value="Send">
-        </form>
+        <ContactForm />
       </section>
     </Split>
     <div class="hHr"></div>
