--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -1,6 +1,8 @@
 ---
 export interface Props {
 	carouselIndex: string;
+	dataColumns: string;
+	dataId: string;
 }
 
 var { carouselIndex, dataColumns, dataId } = Astro.props as Props;
