--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -33,7 +33,7 @@ async function addImgs() {
         }, 
         {
             username: 'juhi', 
-            imgs: await Astro.glob('../../../members/juhi/portfolio/')
+            imgs: await Astro.glob('../../../members/juhi/portfolio/*')
         }, 
         {
             username: 'shikha', 
