--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -45,11 +45,12 @@ var members = [
 
 members.forEach(m => {
     m.imgs.forEach(img => {
-        // if (getFExt(img.src) !== 'pdf')
-        images.push({
-            username: m.username, 
-            img: img,
-        })
+        if (typeof img === 'object') {
+            images.push({
+                username: m.username, 
+                img: img,
+            })
+        }
     })
 })
 
@@ -82,8 +83,9 @@ var dId = 'workCarousel'
 ---
 <Carousel carouselIndex={carouselIndex} dataColumns={images.length} dataId={dId}>
     {
-        images.map((img, i) => {
-            return <pre>{JSON.stringify(img, null, 4)}</pre>
+        images.map((data, i) => {
+            data.img = data.img.default
+            return <pre>{JSON.stringify(data, null, 4)}</pre>
             // return <LargeImage id={`${dId}-${i}`} img={img} alt={`${getFName(data.file)} by ${toProper(data.username)}`}draggable={false} />
         })
     }
