--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -27,22 +27,22 @@ var images = []
 var members = [
     {
         username: 'isabelle', 
-        imgs: await Astro.glob('../../../members/isabelle/portfolio/*')
+        imgs: await Astro.glob('../../../members/isabelle/portfolio/*'), 
         fullRes: [], 
     }, 
     {
         username: 'juhi', 
-        imgs: await Astro.glob('../../../members/juhi/portfolio/*')
+        imgs: await Astro.glob('../../../members/juhi/portfolio/*'), 
         fullRes: [], 
     }, 
     {
         username: 'shikha', 
-        imgs: await Astro.glob('../../../members/shikha/portfolio/*')
+        imgs: await Astro.glob('../../../members/shikha/portfolio/*'), 
         fullRes: [], 
     }, 
     {
         username: 'samantha', 
-        imgs: await Astro.glob('../../../members/samantha/portfolio/*')
+        imgs: await Astro.glob('../../../members/samantha/portfolio/*'), 
         fullRes: [], 
     }, 
 ]
