--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -110,8 +110,7 @@ var dId = 'workCarousel'
 <Carousel carouselIndex={carouselIndex} dataColumns={images.length} dataId={dId}>
     {
         images.map((img, i) => {
-            return <pre>{JSON.stringify(img, null, 4)}</pre>
-            // return <LargeImage id={`${dId}-${i}`} img={img} alt={`${getFName(data.file)} by ${toProper(data.username)}`}draggable={false} />
+            return <LargeImage id={`${dId}-${i}`} src={img.src} alt={`${getFNameNoExt(img.src)} by ${toProper(img.username)}`}draggable={false} />
         })
     }
 </Carousel>
