--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -22,9 +22,10 @@ var dId = 'clubCarousel'
     {
         images.map((img, i) => {
             img = img.default
-            return <pre>{JSON.stringify(img, null, 4)}</pre>
-            // var src = `/assets/club_photos/previews/${getFName(img.src)}`
-            // return <LargeImage id={`${dId}-${i}`} src={src} draggable={false} />
+            var orientation = img.orientation
+            if (orientation === 1) orientation = 'l'
+            if (orientation === 6) orientation = 'p'
+            return <LargeImage id={`${dId}-${i}`} src={img.src} orientation={orientation} draggable={false} />
         })
     }
 </Carousel>
