--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -10,95 +10,18 @@ import '../styles/components/carousel.scss'
             i = dataI
         }
 
-        var images = carousel.querySelectorAll('img')
-        images.forEach(function(img, i) {
-            img.onmouseover = function(e) {
-                e.target.setAttribute('hover-in', '')
-                setTimeout(function() {
-                    e.target.setAttribute('hover', '')
-                }, 1);
-            }
-            img.onmouseout = function(e) {
-                e.target.removeAttribute('hover')
-                setTimeout(function(e) {
-                    e.target.removeAttribute('hover-in')
-                }, 1)
-            }
+        carousel.querySelectorAll('.arrow').forEach(a => {
+            a.removeAttribute('hidden')
         })
     })
 </script>
 <script is:inline>
-    var currImgS = []
-    var dCarousels = document.querySelectorAll('.carousel')
-    dCarousels.forEach(function(c, i) {
-        if (!!c.querySelector('.active')) {
-            currImgS.push(c.querySelector('.active').getAttribute('data-index'))
-        }
-    })
-  
     function setImg(car=0) {
-        let carousel = document.querySelectorAll('.carousel')[car]
-        let ul = carousel.querySelector('ul.imgs')
-        let imgs = ul.querySelectorAll('img')
-        let oActive = ul.querySelector('.active')
-        oActive.querySelectorAll('div').forEach(e => {
-            e.style.display = 'none'
-        })
-        oActive.className = ''
-        ul.querySelector('.left').className = ''
-        ul.querySelector('.right').className = ''
-        imgs[currImgS[car]].className = 'active'
-        imgs[currImgS[car] - 1].className = 'left'
-        imgs[currImgS[car] + 1].className = 'right'
     }
     
     function goBack(car=0) {
-        let carousel = document.querySelectorAll('.carousel')[car]
-        var aS = carousel.querySelectorAll('a')
-        var bAHref = aS[0]
-        var fAHref = aS[aS.length-1]
-        var imgS = carousel.querySelectorAll('img')
-        var bArrow = imgS[0]
-        var fArrow = imgS[imgS.length-1]
-        let ul = carousel.querySelector('ul.imgs')
-        let imgs = ul.querySelectorAll('img')
-        currImgS[car]--
-        imgs[currImgS[car] - 1].style.display = ''
-        imgs[currImgS[car] + 2].style.display = 'none'
-        setImg(car)
-        if (currImgS[car] - 2 < 0) {
-            bAHref.removeAttribute('href')
-            bArrow.src = '/assets/blank.png'
-            bArrow.removeAttribute('onclick')
-        }
-        else {
-            fAHref.href = `javascript:goForw(${car})`
-            fArrow.src = '/assets/arrows/R.svg'
-        }
     }
   
     function goForw(car=0) {
-        let carousel = document.querySelectorAll('.carousel')[car]
-        var aS = carousel.querySelectorAll('a')
-        var bAHref = aS[0]
-        var fAHref = aS[aS.length-1]
-        var imgS = carousel.querySelectorAll('img')
-        var bArrow = imgS[0]
-        var fArrow = imgS[imgS.length-1]
-        let ul = carousel.querySelector('ul.imgs')
-        let imgs = ul.querySelectorAll('img')
-        currImgS[car]++
-        imgs[currImgS[car] - 2].style.display = 'none'
-        imgs[currImgS[car] + 1].style.display = ''
-        setImg(car)
-        if (currImgS[car] + 2 >= imgs.length) {
-            fAHref.removeAttribute('href')
-            fArrow.src = '/assets/blank.png'
-            fArrow.removeAttribute('onclick')
-        }
-        else {
-            bAHref.href = `javascript:goBack(${car})`
-            bArrow.src = '/assets/arrows/L.svg'
-        }
     }
 </script>
