--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -12,7 +12,7 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
             max-height: var(--max, 100%);
             max-width: 100%;
         }
-        > .img-container > img {
+        > .img-container {
             box-sizing: border-box;
             padding: 25px;
         }
