--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -14,7 +14,7 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
         }
         > .img-container {
             box-sizing: border-box;
-            padding: 25px;
+            margin: 25px;
         }
     }
 
