--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -13,8 +13,12 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
             max-width: 100%;
         }
         > .img-container {
+            --mar: 25px;
+            
             box-sizing: border-box;
-            margin: 25px;
+            margin: var(--mar);
+            max-height: calc(var(--max, 100%) - var(--mar));
+            max-width: calc(var(--max, 100%) - var(--mar));
         }
     }
 
