--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -14,11 +14,11 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
         }
         > .img-container {
             --mar: 25px;
-            
+
             box-sizing: border-box;
             margin: var(--mar);
-            max-height: calc(var(--max, 100%) - var(--mar));
-            max-width: calc(var(--max, 100%) - var(--mar));
+            max-height: calc(var(--max, 100%) - var(--mar)*2);
+            max-width: calc(var(--max, 100%) - var(--mar)*2);
         }
     }
 
