--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -10,9 +10,9 @@ import '../styles/components/carousel.scss'
             i = dataI
         }
 
-        // carousel.querySelectorAll('.arrow').forEach(a => {
-        //     a.removeAttribute('hidden')
-        // })
+        carousel.querySelectorAll('.arrow').forEach(a => {
+            a.removeAttribute('hidden')
+        })
     })
 </script>
 <script is:inline>
