--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -26,6 +26,11 @@ var images = []
 
 var members = [
     {
+        username: 'maya', 
+        imgs: await Astro.glob('../../../members/maya/portfolio/*'), 
+        fullRes: [], 
+    }, 
+    {
         username: 'isabelle', 
         imgs: await Astro.glob('../../../members/isabelle/portfolio/*'), 
         fullRes: [], 
