--- a/src/pages/mission.astro
+++ b/src/pages/mission.astro
@@ -6,7 +6,7 @@ import Hero from '../components/hero.astro'
   <main id="content">
     <Hero classItems="fullHeight">
       <section class="missiontext">
-        <h1 id="whymakethisclub">Why make this club?</h1>
+        <h1 class="missiontitle">Our Mission</h1>
         <p class="text" centered>
           Our mission is to help create change in the world through design. We understand the importance of design in the non-profit sector, and we want to use our skills and resources to support organizations that are making a positive impact in our community and beyond. We strive to provide free design help for non-profits that support a wide range of causes, from environmental protection to healthcare, education and more.
         </p>
