--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,23 +36,22 @@ import '../styles/photos.scss'
         <h2 style="font-size: 2.25rem;">Interested in partnering with us?</h2>
         <h1>Contact Us</h1>
         <ContactForm />
+        <p>Have a nonprofit in need? You can also connect with us at <a target="_blank" href="mailto:hello@graphics-for-good.com">hello@graphics-for-good.com!</a></p>
       </section>
     </Split>
     <div class="hHr"></div>
-    <section id="mwork" class="photos">
+    <section class="photos">
       <Carousels>
-        <section align="center">
-          <h1 style="--text-color: blue; cursor: pointer;" onclick="location.href = '/work?magic=true'" title="Click here to convert to list!">Member Work</h1>
+        <section id="mwork" align="center">
+          <h1>Member Work</h1>
           <WorkCarousel carouselIndex="0" />
         </section>
         <div class="hHr" style="--width: 850px;"></div>
-        <section align="center">
-          <h1 id="cphotos">Club Photos</h1>
+        <section id="cphotos" align="center">
+          <h1>Club Photos</h1>
           <ClubCarousel carouselIndex="1" />
         </section>
       </Carousels>
     </section>
   </main>
-  <script is:inline src="/contact.js"></script>
-  <script is:inline src="/photos.js"></script>
 </Layout>
